[package]
name = "figmaid"
version = "0.1.0"
authors=["Jasper Nykänen <nykanen@hey.com>"]
edition = "2021"
default-run="figmaid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.18", features= ["default", "cargo"]}
home = "0.5.3"
hyper = { version = "0.14.19", features = ["server", "http1","runtime","client"] } 
hyper-tls = "0.5.0"
jsonschema = "0.16.0"
opener = "0.5.0"
regex = "1.5.6"
serde = "1.0.137"
serde_json = "1.0.81"
tokio =  { version = "1", features = ["macros"] }
ttf-parser = "0.15.1"
url = "2.2.2"
walkdir = "2.3.2"

[dev-dependencies]
mdbook = "0.4.18"
